# consulsync

./: .gitignore  Cargo.toml  config.toml  config_open.toml  config_traefik_authelia.toml  flake.nix
consul/: node-id
src/: check.rs  config.rs  consul.rs  hotreloading.rs  main.rs  main.rs.bak
