[package]
name = "consul"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
consulrs = "0.1.0"
figment = { version = "0.10.16", features = ["toml", "env"] }
reqwest = "0.12.3"
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = "0.3.18"
